fixed keyboard overlap content

--- a/Kito_app/src/app/main/hymn-music/hymn-music.page.scss
+++ b/Kito_app/src/app/main/hymn-music/hymn-music.page.scss
@@ -21,7 +21,7 @@ ion-content {
       --border-radius: 10px;
 
       &::part(indicator-background) {
-        background: #f6c33e;
+        background: #EDD81F;
         box-shadow: 0px 5px 8px rgba(189, 189, 189, 0.25);
       }
     }
@@ -71,7 +71,7 @@ ion-footer {
   }
 
   .active-song-cover {
-    background: #f2f2f2;
+    background: #FFFCE0;
 
     .left-box {
       .song-name {
