--- a/Kito_app/src/global.scss
+++ b/Kito_app/src/global.scss
@@ -14,7 +14,7 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 :root {
-  --main-color: #f6c33e;
+  --main-color: #EDD81F;
   --second-color: #EDD81F;
   --third-color: #f1c56b;
   --title-color: #717171;
